--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_admin_scaffold: ^1.4.0
+  file_picker: ^8.0.5
 
 dev_dependencies:
   flutter_test:
