handle uploading images to cloudinary

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_admin_scaffold: ^1.4.0
   file_picker: ^8.0.5
   http: ^1.2.2
+  cloudinary_public: ^0.23.1
 
 dev_dependencies:
   flutter_test:
